# =============================================================================
# Skills Handlers Interface
# =============================================================================
#
# Contains the ISkillHandler interface that all skill handlers implement.
# Concrete handler implementations are in ../builtins/

# No source files - interface is header-only
skills_handler_sources = []

skills_handler_inc = include_directories('.')
