# =============================================================================
# Skills Registry Build Configuration
# =============================================================================
#
# Skill metadata and registration infrastructure.
# Shared between manager (validation) and worker (diagnostics).

skills_registry_sources = files(
  'SkillRegistry.cpp',
)

skills_registry_inc = include_directories('.')
